--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "play": "playwright test --ui"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
